fixes: some spacing updated

--- a/arquivos/css/styles.css
+++ b/arquivos/css/styles.css
@@ -577,10 +577,6 @@ input[type="checkbox"]:checked {
   top: 0.75rem;
 }
 
-.z-10{
-  z-index: 10;
-}
-
 .my-10{
   margin-top: 2.5rem;
   margin-bottom: 2.5rem;
@@ -858,11 +854,6 @@ input[type="checkbox"]:checked {
        column-gap: 0.75rem;
 }
 
-.gap-x-36{
-  -moz-column-gap: 9rem;
-       column-gap: 9rem;
-}
-
 .gap-x-4{
   -moz-column-gap: 1rem;
        column-gap: 1rem;
@@ -895,6 +886,16 @@ input[type="checkbox"]:checked {
 
 .gap-y-7{
   row-gap: 1.75rem;
+}
+
+.gap-x-64{
+  -moz-column-gap: 16rem;
+       column-gap: 16rem;
+}
+
+.gap-x-56{
+  -moz-column-gap: 14rem;
+       column-gap: 14rem;
 }
 
 .space-x-5 > :not([hidden]) ~ :not([hidden]){
@@ -1504,6 +1505,11 @@ input[type="checkbox"]:checked {
 
   .md\:justify-start{
     justify-content: flex-start;
+  }
+
+  .md\:gap-x-36{
+    -moz-column-gap: 9rem;
+         column-gap: 9rem;
   }
 
   .md\:text-left{
